@@ -3,6 +3,7 @@ Changelog for hydra
 
 Release 9.1-dev
 * your patch? :)
+* added -K command line switch to disable redo attempts (good for mass scanning)
 * forgot to have the -m option in the hydra help output
 
 
